fix: docs structure change for the cli

--- a/docs/pages/developer-guides/network-information.mdx
+++ b/docs/pages/developer-guides/network-information.mdx
@@ -5,20 +5,17 @@ description: Setup Nodes for Alpha Testnet
 
 # Network Information
 
-# surge-testnet-1
+# Surge Alphatestnet 1
 
 ## Surge Version
 
-Version [v1.0.0](https://github.com/surgebuild/surge)
+Version [v0.0.2](https://github.com/surgebuild/surge)
 
 ## Seed Nodes
 
-### Surge Foundation
 
 ## RPC Nodes
-
 - https://alphatestnet.surge.dev
 
 ## LCD (Node API) Nodes
-
 - https://api-alphatestnet.surge.dev
