--- a/docs/pages/developer-guides/wallets-tokens/connect-keplr.mdx
+++ b/docs/pages/developer-guides/wallets-tokens/connect-keplr.mdx
@@ -13,7 +13,7 @@ description: Connect Keplr Wallet
 
 ## Add Surge Alpha Testnet Chain
 
-Visit [https://chains.keplr.app](https://chains.keplr.app) search for "**Surge Aplha Testnet**" and add it to your Keplr wallet.
+Visit [https://chains.keplr.app](https://chains.keplr.app) search for "**Surge Alpha Testnet**" and add it to your Keplr wallet.
 
 <img src="/assets/add_surge_network.png" alt="add network" />
 
