resized images and faucet link

--- a/docs/pages/developer-guides/wallets-tokens/connect-keplr.mdx
+++ b/docs/pages/developer-guides/wallets-tokens/connect-keplr.mdx
@@ -9,44 +9,70 @@ description: Connect Keplr Wallet
 
 [![Logo](https://assets.website-files.com/61e518f84aa2a6645094f0ad/621751811f62db2c7da50744_Keplr_256.png) Keplr Wallet](https://www.keplr.app/)
 
-<img src="/assets/surge-keplr.png" alt="" />
+<img src="/assets/surge-keplr.png" alt="" className="shadow-lg max-w-[100px]" />
 
 ## Add Surge Alpha Testnet Chain
 
 Visit [https://chains.keplr.app](https://chains.keplr.app) search for "**Surge Alpha Testnet**" and add it to your Keplr wallet.
 
-<img src="/assets/add_surge_network.png" alt="add network" />
-
 Add "**Surge Alpha Testnet**" Chain to Keplr:
 
-<img src="/assets/add_network_confirmation.png" alt="add network" />
+<img
+  src="/assets/add_network_confirmation.png"
+  alt="add_network_confirmation"
+  className="max-w-[300px] shadow-lg"
+/>
 
 ## Create a Wallet with Surge Alpha Testnet Address
 
 If you dont have a wallet in Keplr, go ahead and create one on the new page, choose "**Create a new wallet**".
 
-<img src="/assets/create_keplr_wallet.png" alt="add network" />
+<img
+  src="/assets/create_keplr_wallet.png"
+  alt="create_keplr_wallet"
+  className="max-w-[300px] shadow-lg"
+/>
 
 Open the Keplr wallet extension, click the user avatar in the top right corner, and select "**Add Wallet**" on the Select Wallet page.
 
-<img src="/assets/create_wallet.png" alt="add network" />
+<img
+  src="/assets/create_wallet.png"
+  alt="create_wallet"
+  className="max-w-[300px] shadow-lg"
+/>
 
 ## Manage chain visibility
 
 Click on the hamburger icon on the top left corner of the wallet and select **Manage chain visibility** :
 
-<img src="/assets/manage_chain_visibilty.png" alt="add network" />
+<img
+  src="/assets/manage_chain_visibilty.png"
+  alt="manage_chain_visibilty"
+  className="max-w-[300px] shadow-lg"
+/>
 
 Search for **Surge Alpha Testnet** and save the changes:
 
-<img src="/assets/add_chain.png" alt="add network" />
+<img
+  src="/assets/add_chain.png"
+  alt="add_chain"
+  className="max-w-[300px] shadow-lg"
+/>
 
 ## Surge Alpha Testnet added to your wallet
 
-<img src="/assets/surg_network_list.png" alt="add network" />
+<img
+  src="/assets/surg_network_list.png"
+  alt="surge_alpha_testnet_added_to_your_wallet"
+  className="max-w-[300px] shadow-lg"
+/>
 
-<img src="/assets/surge_chain_wallet.png" alt="add network" />
+<img
+  src="/assets/surge_chain_wallet.png"
+  alt="surge_chain_wallet"
+  className="max-w-[300px] shadow-lg"
+/>
 
-## Request usurg tokens from faucet
+## Request SURG tokens from faucet
 
-You will now see Surge Alpha Testnet address in your Keplr wallet. To get Testnet usurg, please refer [get-tokens](/developer-guides/wallets-tokens/get-tokens)
+You will now see Surge Alpha Testnet address in your Keplr wallet. To get Testnet SURG, please refer [Get-SURG](/developer-guides/wallets-tokens/get-tokens)
