--- a/docs/pages/developer-guides/wallets-tokens/get-tokens.mdx
+++ b/docs/pages/developer-guides/wallets-tokens/get-tokens.mdx
@@ -5,6 +5,13 @@ description: Get Surge Tokens form faucet
 
 # Web Faucet
 
+<img
+  src="/assets/faucet.png"
+  alt="faucet"
+  className="max-w-[500px] border border-gray-100 shadow-lg"
+/>
+Visit: [Surge Alpha Testnet Faucet]( https://faucet-alphatestnet.surge.dev/)
+
 # Discord Faucet
 
 **_Coming Soon!_**
